ci: add workflow for pr comment
Signed-off-by: smrpn <samarpan_d@pp.iitr.ac.in>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,4 +23,14 @@ jobs:
         with:
           cwd: benches
           token: ${{ secrets.GITHUB_TOKEN }}
+        
+
+      - name: Save PR number
+        run: |
+            mkdir -p ./pr
+            echo ${{ github.event.number }} > ./pr/NR
+      - uses: actions/upload-artifact@v2
+        with:
+            name: pr
+            path: pr/
 
